--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
       </ul>
     </section>
 
-    <section>
+<!--     <section>
   <h2>Certifications</h2>
   <ul>
     <li>Full-Stack Web Development - Coursera (2024)</li>
     <li>Python for Everybody - NPTEL (2023)</li>
     <li>AI in Practice - IBM SkillsBuild (2023)</li>
   </ul>
-</section>
+</section> -->
 
 <section>
       <h2>Personal Information</h2>
